@@ -5,7 +5,6 @@
 #define KDE3PREFIX        "@KDE3PREFIX@"
 #define KDE4PREFIX        "@KDE4PREFIX@"
 
-#cmakedefine QTC_DISABLE_KDEFILEDIALOG_CALLS
 #cmakedefine QTC_QT_ONLY
 #cmakedefine QTC_OLD_NVIDIA_ARROW_FIX
 #cmakedefine QTC_STYLE_SUPPORT
