@@ -1,11 +1,10 @@
 #ifndef __CONFIG_H__
 #define __CONFIG_H__
 
-/* #define VERSION "1.4.2" */
+/* #define VERSION "1.5.3" */
 #define KDE3PREFIX        "/usr"
 #define KDE4PREFIX        "/usr"
 
-#define QTC_DISABLE_KDEFILEDIALOG_CALLS
 #define QTC_QT_ONLY
 /* #undef QTC_OLD_NVIDIA_ARROW_FIX */
 #define QTC_STYLE_SUPPORT
